--- a/public/app/css/custom/recipe/base-show.css
+++ b/public/app/css/custom/recipe/base-show.css
@@ -1,3 +1,9 @@
+.table-utensils-show > thead {
+	background-color: rgb(60, 141, 188);
+	color: white;
+	text-align:center;
+	vertical-align:middle;	
+}
 .nav-tabs-custom>.nav-tabs> li:nth-child(-n+3) > a {
 	font-weight: bold;
 	font-size: 20px;
