--- a/public/app/css/custom/recipe/show.css
+++ b/public/app/css/custom/recipe/show.css
@@ -1,3 +1,9 @@
+.table-utensils-show > thead {
+	background-color: rgb(60, 141, 188);
+	color: white;
+	text-align:center;
+	vertical-align:middle;	
+}
 .nav-tabs-custom>.nav-tabs> li:nth-child(-n+3) > a {
 	font-weight: bold;
 	font-size: 20px;
@@ -12,7 +18,7 @@
 .table-xls-main-title > tbody > tr:nth-child(n+6) {
 	background-color: rgb(60, 141, 188);
 	color: white;
-		text-align:center;
+	text-align:center;
 	vertical-align:middle;		
 }
 
